@@ -1,5 +1,5 @@
 .\"
-.\" $Id: amavisd-milter.8,v 1.8 2006/01/24 15:20:05 reho Exp $
+.\" $Id: amavisd-milter.8,v 1.9 2006/04/26 22:13:40 reho Exp $
 .\"
 .Dd Januar 23, 2006
 .Dt amavisd-milter 8
@@ -154,8 +154,10 @@ Then (re)start amavisd daemon.
 .Ss Configuring sendmail
 To the sendmail.mc file add the following entries:
 .Bd -literal -offset indent
+define(`confMILTER_MACROS_HELO',
+	confMILTER_MACROS_HELO`, r')
 define(`confMILTER_MACROS_ENVFROM',
-	confMILTER_MACROS_ENVFROM``, {i}'')
+	confMILTER_MACROS_ENVFROM`, i')
 INPUT_MAIL_FILTER(`amavisd-milter',
 	`S=local:/var/amavis/amavisd-milter.sock,
 	F=T, T=S:10m;R:10m;E:10m')
